- Improving search experience by implementing drill down on places and hashtags

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -95,11 +95,11 @@
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get posts by tag" click-target="http://localhost:8080/instagram/explore/tag?" call-type="tag-posts">Get posts by tag</button>
+          <button class="btn btn-primary" type="button"  value="Get posts by tag" click-target="http://localhost:8080/instagram/tag?" call-type="tag-posts">Get posts by tag</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get posts by location" click-target="http://localhost:8080/instagram/explore/location?" call-type="location-posts">Get posts by location</button>
+          <button class="btn btn-primary" type="button"  value="Get posts by location" click-target="http://localhost:8080/instagram/location?" call-type="location-posts">Get posts by location</button>
           <br/>
         </li>
         <li>
