--- a/src/views/pages/posts.ejs
+++ b/src/views/pages/posts.ejs
@@ -9,15 +9,16 @@
             <img class="img-fluid" src="<%= edge.thumbnail_src %>" alt="<%= edge.edge_media_to_caption? edge.edge_media_to_caption.edges[0]:[] %>">
           </div>
           <div class="likes-comments">
-              <span style="color: rgb(249,5,5);">
+              <span style="cursor:pointer; color: rgb(249,5,5);" onClick=getEndpoint("http://localhost:8080/instagram/likes?","post-likes","<%= edge.shortcode %>","post-likes")>
                 <% if(edge.edge_media_preview_like){ %>
-                  <% if(edge.edge_media_preview_like.count) { %><%= edge.edge_media_preview_like.count+' ' %>
-                  &hearts; <% } %>
+                  <% if(edge.edge_media_preview_like.count) { %><%= edge.edge_media_preview_like.count+' ' %> &hearts;
+                  <% } %>
+
                 <% }else{ %>
                   <%= edge.edge_liked_by.count+' ' %> &hearts;
                 <% } %>
               </span>
-            <span style="color: transparent;  text-shadow: 0 0 0 rgb(42, 170, 82);">
+            <span style="cursor:pointer; color: transparent;  text-shadow: 0 0 0 rgb(42, 170, 82);" onClick=getEndpoint("http://localhost:8080/instagram/comments?","post-comments","<%= edge.shortcode %>","post-comments")>
               <% if(edge.edge_media_to_comment){ %>
                 <%= edge.edge_media_to_comment.count+' ' %> &#x1F5E8;
               <% } %>
