--- a/src/views/pages/feed.ejs
+++ b/src/views/pages/feed.ejs
@@ -17,7 +17,7 @@
             <% }else if(edge.edge_liked_by){ %><%= edge.edge_liked_by? edge.edge_liked_by.count : '-&#45;&#45;' + ' ' %> &hearts; <% } %>
           </p>-->
             <div class="likes-comments">
-              <span style="color: rgb(249,5,5);">
+              <span style="cursor:pointer; color: rgb(249,5,5);" onClick=getEndpoint("http://localhost:8080/instagram/likes?","post-likes","<%= edge.shortcode %>","post-likes")>
                 <% if(edge.edge_media_preview_like){ %>
                   <% if(edge.edge_media_preview_like.count) { %><%= edge.edge_media_preview_like.count+' ' %>
                   &hearts; <% } %>
@@ -25,7 +25,7 @@
                   <%= edge.edge_liked_by.count+' ' %> &hearts;
                 <% } %>
               </span>
-              <span style="color: transparent;  text-shadow: 0 0 0 rgb(42, 170, 82);">
+              <span style="cursor:pointer; color: transparent;  text-shadow: 0 0 0 rgb(42, 170, 82);" onClick=getEndpoint("http://localhost:8080/instagram/comments?","post-comments","<%= edge.shortcode %>","post-comments")>
                 <% if(edge.edge_media_to_comment){ %>
                   <%= edge.edge_media_to_comment.count+' ' %> &#x1F5E8;
                 <% } %>
