- Implemented dashboard layouts and styles - Implemented explore, engagement and stats dashboard views - Changed default layout and added Navbar for navigation

--- a/src/views/layouts/layout-header.ejs
+++ b/src/views/layouts/layout-header.ejs
@@ -5,3 +5,4 @@
 
 <title>Houman Hadian's Doctoral Project @ualg</title>
 <%- include ../layouts/layout-stylesheets.ejs %>
+<%- include ../layouts/layouts-javascripts-head.ejs %>
