--- a/src/views/layouts/layout-stylesheets.ejs
+++ b/src/views/layouts/layout-stylesheets.ejs
@@ -3,5 +3,7 @@
 <link rel="stylesheet" href="/css/bootstrap-glyphicons.css">
 <!--<link src="http://cdn.leafletjs.com/leaflet/v1.0.3/leaflet.css">-->
 <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
+
 <link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/dashboard.css">
 <!--<link rel="stylesheet" href="/css/font-awesome.min.css">-->
