--- a/src/views/layouts/layouts-javascripts.ejs
+++ b/src/views/layouts/layouts-javascripts.ejs
@@ -1,10 +1,8 @@
-<script type="text/javascript" src="/js/jquery.min.js"></script>
-<script type="text/javascript" src="/js/popper.min.js"></script>
-<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/core.min.js"></script>
 <script type="text/javascript" src="/js/bootstrap-notify.min.js"></script>
 <script type="text/javascript" src="/js/dayjs.min.js"></script>
 <script type="text/javascript" src="/js/jquery.sparkline.min.js"></script>
+<script type="text/javascript" src="/js/holder.js"></script>
 <!--<script type="text/javascript" src="/js/echarts.min.js"></script>-->
 <script src="/js/feathers.js"></script>
 <script src="/js/socket.io.js"></script>
