--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+:root {
+  --grid-gap: 15px;
+}
 * {
   margin: 0;
   padding: 0;
@@ -149,10 +152,10 @@ a:focus {
 
 /* Style the button that is used to open the sidepanel */
 .instabtn {
-  width: 200px;
-  min-width: 12%;
+ /* width: 200px;
+  min-width: 12%;*/
   height: 50px;
-  position: fixed;
+ /* position: fixed;*/
   font-size: 20px;
   cursor: pointer;
   background-color: #111;
@@ -181,7 +184,7 @@ a:focus {
   min-width: 12%;
   padding: 10px;
   left: 0px;
-  top: 50px;
+  top: 66px;
   float: left;
   display: inline-block;
 }
@@ -216,17 +219,6 @@ a:focus {
 
 }
 
-.logo-footer {
-  position: fixed;
-  background-color: #020101;
-  width: 200px;
-  min-width: 12%;
-  /* height: 20px; */
-  left: 0;
-  z-index: 2;
-  bottom: 0;
-}
-
 .loader {
   margin: 0 0 2em;
   height: 100%;
@@ -250,7 +242,8 @@ svg rect {
   position: absolute;
   top: 0;
   right: 0;
-  cursor: pointer
+  cursor: pointer;
+  margin:0;
 }
 
 .github:hover {
@@ -499,6 +492,10 @@ img {
 }
 
 .navbar {
+  z-index: 3;
+  position: fixed;
+  top: 0;
+  width: 100%;
   border-bottom: 1px solid #e6e6e6
 }
 
@@ -549,3 +546,5 @@ img {
 .modal-backdrop {
   z-index: 0;
 }
+
+
