--- a/src/views/layouts/layout-home.ejs
+++ b/src/views/layouts/layout-home.ejs
@@ -1,9 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <%- include ../layouts/layout-header.ejs %>
 </head>
 <body>
 
-<button class="instabtn" onclick="openNav('insta-sidepanel')">&#9776; Instagram</button>
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <button class="instabtn" onclick="openNav('insta-sidepanel')">&#9776;</button>
+  <ul class="navbar-nav">
+    <li class="nav-item active">
+      <h6 class="nav-link" href="#">Instagram</h6>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/dashboards/stats">Brands stats</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/dashboards/explore">Data Explore</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/dashboards/engagement">Brand engagement</a>
+    </li>
+  </ul>
+</nav>
 <div class="main-contaier">
   <%- include ../pages/main.ejs %>
 </div>
@@ -11,3 +30,4 @@
 
 <%- include ../layouts/layout-footer.ejs %>
 </body>
+</html>
