--- a/src/views/layouts/layout-home.ejs
+++ b/src/views/layouts/layout-home.ejs
@@ -23,7 +23,7 @@
     </li>
   </ul>
 </nav>
-<div class="main-contaier">
+<div style="margin-top:66px" id="main-contaier" class="main-contaier">
   <%- include ../pages/main.ejs %>
 </div>
 <%- include ../pages/sidepanel.ejs %>
