--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -23,50 +23,50 @@
     </li>
   </ul>
 </nav>
-<div class="main-contaier">
+<div  class="main-contaier">
   <div class="dash-container grid grid-split-columns">
     <div class="chart-wrapper">
       <div class="chart-title">
-        Cell Title5
+        Top 10 Brands
       </div>
       <div class="chart-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="chart-notes">
-        Notes about this chart
+        Horizontal bar chart of top 10 brands overall engagement
       </div>
     </div>
     <div class="chart-wrapper">
       <div class="chart-title">
-        Cell Title6
+        Top 10 brands metrics
       </div>
       <div class="chart-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="chart-notes">
-        Notes about this chart
+        Top 10 brands posts, likes, comments, followers and following counters
       </div>
     </div>
     <div class="chart-wrapper">
       <div class="chart-title">
-        Cell Title7
+        Top 10 Brands
       </div>
       <div class="chart-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="chart-notes">
-        Notes about this chart
+        Horizontal bar chart of top 10 brands overall engagement
       </div>
     </div>
     <div class="chart-wrapper">
       <div class="chart-title">
-        Cell Title8
+        Top 10 brands metrics
       </div>
       <div class="chart-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="chart-notes">
-        Notes about this chart
+        Top 10 brands posts, likes, comments, followers and following counters
       </div>
     </div>
     <div class="grid-split">
