--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -27,10 +27,10 @@
           <fieldset>
             <input class="block" type="username" name="username" placeholder="username">
           </fieldset>
-
+<!--
           <fieldset>
             <input class="block form-control" type="password" name="password" placeholder="password">
-          </fieldset>
+          </fieldset>-->
 
           <button type="submit" id="login" class="button button-primary block signup">
             Use this Instagram account
