--- a/public/css/style.css
+++ b/public/css/style.css
@@ -284,7 +284,7 @@ svg rect {
 body {
   font-family: Karla, sans-serif;
   background-color: #fafafa;
-  height: 100vh
+  /*height: 100vh*/
 }
 
 input {
@@ -415,7 +415,7 @@ body {
   font-family: Karla,
   sans-serif;
   background-color: #fafafa;
-  height: 100vh
+  /*height: 100vh*/
 }
 
 input {
@@ -519,6 +519,14 @@ img {
   padding: 15px;
   margin: 15px
 }
+.whiteBox-profile {
+  background-color: #fff;
+  border: 1px solid #e6e6e6;
+  /* margin-bottom: 2px; */
+  padding: 15px 16px 8px 0px;
+  min-height: 318px;
+  margin: 15px 15px 8px 15px;
+}
 
 .yellowStars {
   color: gold;
@@ -554,6 +562,7 @@ img {
   color:darkred;
 }
 .byline{
+  cursor: pointer;
   display: inline-block;
   color: black;
   font-size: 1.1em;
