--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -1,10 +1,10 @@
 <main class="container">
   <%include ./logo.ejs%>
-  <img class="github" id="github" alt="Houman Hadian's project on Github" src="/img/svg/github-corner-right.svg">
+  <img class="github" id="github" alt="Houman Hadian's project toolset on Github" src="/img/svg/github-corner-right.svg">
   <div id="alert-container" style="position:absolute;top:100px;right:0">
 
   </div>
-  <div id="carosel" style="width:800px;height:450px;margin-left:14%">
+  <div id="carosel" style="width:600px;height:400px;margin-left:23%">
     <div id="powerpoint" class="carousel slide" data-ride="carousel">
 
       <!-- Indicators -->
@@ -17,34 +17,34 @@
       <!-- The slideshow -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img style="max-width:800px;max-height:450px" src="/img/ppt/Slide1.jpg" alt="Slide #1">
+          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide1.jpg" alt="Slide #1">
         </div>
         <div class="carousel-item">
-          <img style="max-width:800px;max-height:450px" src="/img/ppt/Slide2.jpg" alt="Slide #2">
+          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide2.jpg" alt="Slide #2">
         </div>
         <div class="carousel-item">
-          <img style="max-width:800px;max-height:450px" src="/img/ppt/Slide3.jpg" alt="Slide #3">
+          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide3.jpg" alt="Slide #3">
         </div>
         <div class="carousel-item">
-          <img style="max-width:800px;max-height:450px" src="/img/ppt/Slide4.jpg" alt="Slide #4">
+          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide4.jpg" alt="Slide #4">
         </div>
         <div class="carousel-item">
-          <img style="max-width:800px;max-height:450px" src="/img/ppt/Slide5.jpg" alt="Slide #5">
+          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide5.jpg" alt="Slide #5">
         </div>
         <div class="carousel-item">
-          <img style="max-width:800px;max-height:450px" src="/img/ppt/Slide6.jpg" alt="Slide #6">
+          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide6.jpg" alt="Slide #6">
         </div>
         <div class="carousel-item">
-          <img style="max-width:800px;max-height:450px" src="/img/ppt/Slide7.jpg" alt="Slide #7">
+          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide7.jpg" alt="Slide #7">
         </div>
         <div class="carousel-item">
-          <img style="max-width:800px;max-height:450px" src="/img/ppt/Slide8.jpg" alt="Slide #8">
+          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide8.jpg" alt="Slide #8">
         </div>
         <div class="carousel-item">
-          <img style="max-width:800px;max-height:450px" src="/img/ppt/Slide9.jpg" alt="Slide #9">
+          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide9.jpg" alt="Slide #9">
         </div>
         <div class="carousel-item">
-          <img style="max-width:800px;max-height:450px" src="/img/ppt/Slide10.jpg" alt="Slide #10">
+          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide10.jpg" alt="Slide #10">
         </div>
       </div>
 
@@ -58,7 +58,7 @@
 
     </div>
   </div>
-  <h3 class="center-text">Houman Hadian's PhD research application tool.</h3>
+  <h3 class="center-text">SOCIALYTICS</h3>
   <br/>
   <h5 class="center-text">Instagram client API implemented endpoints.</h5>
   <br/>
