- Socialytics first commit

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -60,7 +60,7 @@
   </div>
   <h3 class="center-text">SOCIALYTICS</h3>
   <br/>
-  <h5 class="center-text">Instagram client API implemented endpoints.</h5>
+  <h5 class="center-text">This application has been developed during Houman Hadian's doctoral project as a survey research tool for primarily Instagram and  hopefully many other social networks in future</h5>
   <br/>
   <div id="content-container">
     <div class="form-container" id="form-container">
